src/test/scala/wacc/wacc_examples/invalid/semanticErr/annotations/tailrec/nonTailTriangularNumbers.wacc
# no recursion

# Output:
# #semantic_error#

# Exit:
# 200

# Program:
begin
    @tailrec
    int triangular(int x) is
        if (x <= 1)
        then return x
        else 
            int y = call triangular(x - 1) ;
            return x + y
        fi
    end

    int x = call triangular(5) ;
    exit x

end